--- a/src/style/media.css
+++ b/src/style/media.css
@@ -17,8 +17,7 @@
   
     .side-country,
     .side-temp,
-    .side-weather,
-    .side-time {
+   .right-side {
       display: none;
     }
     .side-icon {
