--- a/src/style/sideBar.css
+++ b/src/style/sideBar.css
@@ -8,45 +8,49 @@
   .side-container {
     display: grid;
     grid-template-columns: 1fr 45px 90px;
-    grid-template-rows: auto 1fr;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     text-align: center;
     background-image: var(--blackish);
     border-radius: 25px 25px 25px 25px;
     color: white;
     padding: 7.5px 15px;
-    gap: 2.5px;
+    column-gap: 7.5px;
   }
   
+.left-side,
+.right-side {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
   .side-city {
     font-family: 'bold';
   }
   
   .side-country {
-    grid-row: 2/3;
     font-family: 'med';
     font-size: 0.8rem;
     color: var(--greyish)
   }
   
   .side-icon {
-    grid-row: 1/3;
+    grid-column: 2/3;
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
     height: 45px;
+    width: 45px;
   }
   
   .side-temp {
-    grid-row: 1/2;
-    grid-column: 3/4;
     font-family: 'bold';
   }
 
   .side-time {
-      grid-row: 2/3;
-      grid-column: 3/4;
       font-family: 'med';
       font-size: 0.9rem;
       color: rgba(255, 255, 255, 0.6);
